--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="index.html" class="logo">
-                <img src="images/waw_events_logo.png" alt="WAW Events - From Dream to Reality" style="height: 90px;">
+                <img src="images/waw_logo_final.png" alt="WAW Events - From Dream to Reality" style="height: 120px;">
             </a>
             <div class="nav-links">
                 <a href="#hero" class="nav-link">Home</a>
@@ -389,7 +389,7 @@
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>Our Intimate Celebrations package starts at $499. Full wedding production typically
+                            <p>Our Intimate Celebrations package starts at $1499. Full wedding production typically
                                 ranges from $3,500 to $10,000+ depending on venue size and complexity.</p>
                         </div>
                     </div>
@@ -400,8 +400,8 @@
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>Yes, we are fully insured (COI provided to venues). We require a 30% retainer to book,
-                                with the remaining balance due 30 days before the event. Customizable payment plans are
+                            <p>Yes, we are fully insured (COI provided to venues). We require a 25% retainer to book,
+                                with the remaining balance due 15 days before the event. Customizable payment plans are
                                 available.</p>
                         </div>
                     </div>
@@ -416,8 +416,7 @@
                 <p class="section-subtitle">Real stories from our happy couples.</p>
                 <div class="text-center">
                     <div class="google-reviews-header">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
-                            alt="Google G" class="google-g-logo">
+                        <img src="images/google_g.png" alt="Google G" class="google-g-logo">
                         <div class="google-rating-text">
                             <span style="font-size: 1.2rem;">Excellent</span>
                             <div class="google-stars">
@@ -518,29 +517,36 @@
                 <div class="contact-grid-new">
                     <!-- Left: Form -->
                     <div class="contact-form-card">
-                        <form>
+                        <div id="form-success-msg" style="display: none; text-align: center; padding: 2rem;">
+                            <i class="fas fa-check-circle"
+                                style="font-size: 3rem; color: var(--c-gold); margin-bottom: 1rem;"></i>
+                            <h3 style="color: var(--c-primary-dark); margin-bottom: 0.5rem;">Request Submitted!</h3>
+                            <p>Thank you for reaching out. We will get back to you shortly.</p>
+                        </div>
+                        <form id="contact-form" name="contact" method="POST" data-netlify="true">
+                            <input type="hidden" name="form-name" value="contact">
                             <div class="row">
                                 <div class="col-half">
                                     <label>NAME</label>
-                                    <input type="text" placeholder="Your Name">
+                                    <input type="text" name="name" placeholder="Your Name" required>
                                 </div>
                                 <div class="col-half">
                                     <label>PHONE</label>
-                                    <input type="text" placeholder="(555) 000-0000">
+                                    <input type="text" name="phone" placeholder="(555) 000-0000" required>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-full">
                                     <label>EMAIL</label>
-                                    <input type="email" placeholder="email@example.com">
+                                    <input type="email" name="email" placeholder="email@example.com" required>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-full">
                                     <label>EVENT TYPE</label>
-                                    <select>
+                                    <select name="event-type">
                                         <option>Wedding</option>
                                         <option>Reception</option>
                                         <option>Sangeet</option>
@@ -558,7 +564,14 @@
                             <div class="row">
                                 <div class="col-full">
                                     <label>MESSAGE</label>
-                                    <textarea rows="4" placeholder="Tell us about your event details..."></textarea>
+                                    <textarea name="message" rows="4" placeholder="Tell us about your event details..."
+                                        required></textarea>
+                                </div>
+                            </div>
+
+                            <div class="row" style="margin-top: 1rem;">
+                                <div class="col-full">
+                                    <button type="submit" class="submit-btn">Submit Inquiry</button>
                                 </div>
                             </div>
                         </form>
@@ -591,7 +604,8 @@
                         <div class="follow-us-section">
                             <label class="follow-label">FOLLOW US</label>
                             <div class="social-buttons">
-                                <a href="#" class="social-btn"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/waw_events_nj/" target="_blank" class="social-btn"><i
+                                        class="fab fa-instagram"></i></a>
                                 <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
                                 <a href="https://wa.me/15513598317" class="social-btn"><i
                                         class="fab fa-whatsapp"></i></a>
