Updated contact email

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                             </div>
                             <div class="item-text">
                                 <label>EMAIL</label>
-                                <p>wawdecor@gmail.com</p>
+                                <p>waweventsllc@gmail.com</p>
                             </div>
                         </div>
 
