--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
                         <div class="follow-us-section">
                             <label class="follow-label">FOLLOW US</label>
                             <div class="social-buttons">
-                                <a href="https://www.instagram.com/waw_events_nj/" target="_blank" class="social-btn"><i
-                                        class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/wawluxe_events?igsh=MWhmZGRmdmpuajN0Mg%3D%3D&utm_source=qr"
+                                    target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
                                 <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
                                 <a href="https://wa.me/15513598317" class="social-btn"><i
                                         class="fab fa-whatsapp"></i></a>
