Added timeline scroll animations

--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
             <div class="container">
                 <h2 class="section-title">Your Journey With Us</h2>
                 <div class="timeline">
-                    <div class="timeline-item">
+                    <div class="timeline-item animate-up">
                         <div class="t-icon">1</div>
                         <div class="t-content">
                             <h4>Consultation</h4>
                             <p>We meet to understand your vision, theme preference, and venue details.</p>
                         </div>
                     </div>
-                    <div class="timeline-item">
+                    <div class="timeline-item animate-up delay-1">
                         <div class="t-icon">2</div>
                         <div class="t-content">
                             <h4>Design Board</h4>
@@ -300,14 +300,14 @@
                             </p>
                         </div>
                     </div>
-                    <div class="timeline-item">
+                    <div class="timeline-item animate-up delay-2">
                         <div class="t-icon">3</div>
                         <div class="t-content">
                             <h4>Refinement</h4>
                             <p>Finalizing flowers, fabrics, furniture, and lighting selections.</p>
                         </div>
                     </div>
-                    <div class="timeline-item">
+                    <div class="timeline-item animate-up delay-3">
                         <div class="t-icon">4</div>
                         <div class="t-content">
                             <h4>Execution</h4>
