Updated section title to Our Expertise

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- Our Creation Section (Gallery Entry) -->
     <section id="our-creation" class="section bg-soft">
         <div class="container">
-            <h2 class="section-title">Our Creation</h2>
+            <h2 class="section-title">Our Expertise</h2>
             <p class="section-subtitle">Explore our portfolio by category.</p>
 
             <div class="services-grid">
