Restructured gallery to 4 categories and updated logo background

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="index.html" class="logo">
-                <img src="images/waw_events_logo_transparent.png" alt="WAW Events - From Dream to Reality"
+                <img src="images/waw_events_logo_cream.png" alt="WAW Events - From Dream to Reality"
                     style="height: 120px;">
             </a>
             <div class="nav-links">
@@ -104,116 +104,48 @@
             <p class="section-subtitle">Explore our portfolio by category.</p>
 
             <div class="services-grid">
-                <!-- Service 1: Haldi -->
+                <!-- Category 1: Weddings & Receptions -->
                 <div class="service-card animate-up">
                     <div class="card-img">
-                        <img src="images/haldi.png" alt="Haldi Decor">
+                        <img src="images/wedding.png" alt="Weddings & Receptions">
                     </div>
                     <div class="card-body">
-                        <h3>Haldi & Mehendi</h3>
-                        <p>Vibrant yellows, marigolds, and playful props to kickstart the festivities with joy.</p>
-                    </div>
-                </div>
-
-                <!-- Service 2: Sangeet -->
-                <div class="service-card animate-up delay-1">
-                    <div class="card-img">
-                        <img src="images/sangeet.png" alt="Sangeet Decor">
-                    </div>
-                    <div class="card-body">
-                        <h3>Sangeet Night</h3>
-                        <p>Glamorous stages, LED walls, and cocktail themes for a night of dance and music.</p>
-                    </div>
-                </div>
-
-                <!-- Service 3: Wedding -->
-                <div class="service-card animate-up delay-2">
-                    <div class="card-img">
-                        <img src="images/wedding.png" alt="Wedding Mandap">
-                    </div>
-                    <div class="card-body">
-                        <h3>The Wedding</h3>
-                        <p>Royal Mandaps, floral aisles, and open-air structures designed for the perfect 'I Do'.</p>
-                    </div>
-                </div>
-
-                <!-- Service 4: Reception -->
-                <div class="service-card animate-up">
-                    <div class="card-img">
-                        <img src="images/reception.png" alt="Reception Decor">
-                    </div>
-                    <div class="card-body">
-                        <h3>Reception Gala</h3>
-                        <p>Elegant centerpieces, chandeliers, and ambient lighting for a luxurious dining experience.
+                        <h3>Weddings & Receptions</h3>
+                        <p>Royal Mandaps, floral aisles, and luxurious reception galas designed for your perfect 'I Do'.
                         </p>
                     </div>
                 </div>
 
-                <!-- Service 5: Home Decor -->
+                <!-- Category 2: Engagement & Sangeet -->
                 <div class="service-card animate-up delay-1">
                     <div class="card-img">
-                        <img src="images/home.png" alt="Home Decor">
+                        <img src="images/sangeet.png" alt="Engagement & Sangeet">
                     </div>
                     <div class="card-body">
-                        <h3>Intimate Home Decor</h3>
-                        <p>Transforming your home with detailed floral rangolis, backdrops, and entrance decor.</p>
+                        <h3>Engagement & Sangeet</h3>
+                        <p>Romantic ring ceremonies and glamorous sangeet nights with LED walls and cocktail themes.</p>
                     </div>
                 </div>
 
-                <!-- Service 6: Florals -->
-                <div class="service-card animate-up delay-1">
-                    <div class="card-img">
-                        <img src="images/hero.png" alt="Florals">
-                    </div>
-                    <div class="card-body">
-                        <h3>Bespoke Florals</h3>
-                        <p>Custom fresh and silk floral arrangements that bring fragrance and color to life.</p>
-                    </div>
-                </div>
-
-                <!-- Service 7: Engagements -->
-                <div class="service-card animate-up">
-                    <div class="card-img">
-                        <img src="images/wedding.png" alt="Engagement Decor">
-                    </div>
-                    <div class="card-body">
-                        <h3>Engagements</h3>
-                        <p>Romantic ring ceremony backdrops and elegant couple seating for your special beginning.</p>
-                    </div>
-                </div>
-
-                <!-- Service 8: Baby Showers -->
-                <div class="service-card animate-up delay-1">
-                    <div class="card-img">
-                        <img src="https://image.pollinations.ai/prompt/cute%20teddy%20bear%20theme%20baby%20shower%20decoration%20pastel%20blue%20and%20pink%20balloons"
-                            alt="Baby Shower Decor">
-                    </div>
-                    <div class="card-body">
-                        <h3>Baby Showers</h3>
-                        <p>Whimsical and cute pastel themes to welcome your little bundle of joy in style.</p>
-                    </div>
-                </div>
-
-                <!-- Service 9: Birthdays -->
+                <!-- Category 3: Haldi, Mehendi & Home Ceremonies -->
                 <div class="service-card animate-up delay-2">
                     <div class="card-img">
-                        <img src="https://image.pollinations.ai/prompt/luxury%20birthday%20party%20decoration%20pastel%20colors%20balloons%20cake%20table"
-                            alt="Birthday Decor">
+                        <img src="images/haldi.png" alt="Haldi, Mehendi & Home">
                     </div>
                     <div class="card-body">
-                        <h3>Birthdays</h3>
-                        <p>From 1st birthdays to milestone celebrations, we create fun and fabulous party settings.</p>
+                        <h3>Haldi, Mehendi & Home Ceremonies</h3>
+                        <p>Vibrant marigolds, playful props, and intimate home decor transformations.</p>
                     </div>
                 </div>
 
-                <!-- Service 10: Corporate Events -->
-                <div class="service-card animate-up">
+                <!-- Category 4: Baby Showers & Birthdays -->
+                <div class="service-card animate-up delay-3">
                     <div class="card-img">
-                        <img src="images/reception.png" alt="Corporate Decor">
+                        <img src="images/home.png" alt="Baby Showers & Birthdays">
                     </div>
                     <div class="card-body">
-                        <h3>Corporate Events</h3>
-                        <p>Professional and sleek decor for galas, product launches, and company milestones.</p>
+                        <h3>Baby Showers & Birthdays</h3>
+                        <p>Whimsical pastel themes and fun party settings for your little ones and milestones.</p>
                     </div>
                 </div>
             </div>
