--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     style="height: 120px;">
             </a>
             <div class="nav-links">
+                <div class="mobile-close-btn">
+                    <i class="fas fa-times"></i>
+                </div>
                 <a href="#hero" class="nav-link">Home</a>
                 <a href="#about" class="nav-link">About Us</a>
                 <a href="#our-creation" class="nav-link">Services & Pricing</a>
