Updated birthday card image

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <!-- Category 4: Baby Showers & Birthdays -->
                 <div class="service-card animate-up delay-3">
                     <div class="card-img">
-                        <img src="images/home.png" alt="Baby Showers & Birthdays">
+                        <img src="images/birthday/uploaded_media_0_1769921637770.png" alt="Baby Showers & Birthdays">
                     </div>
                     <div class="card-body">
                         <h3>Baby Showers & Birthdays</h3>
