Reverted logo blend mode change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container nav-container">
             <a href="index.html" class="logo">
                 <img src="images/waw_events_logo_transparent.png" alt="WAW Events - From Dream to Reality"
-                    style="height: 120px; mix-blend-mode: multiply;">
+                    style="height: 120px;">
             </a>
             <div class="nav-links">
                 <div class="mobile-close-btn">
