--- a/index.html
+++ b/index.html
@@ -460,8 +460,7 @@
                             <h3 style="color: var(--c-primary-dark); margin-bottom: 0.5rem;">Request Submitted!</h3>
                             <p>Thank you for reaching out. We will get back to you shortly.</p>
                         </div>
-                        <form id="contact-form" name="contact" method="POST" data-netlify="true" action="/success.html">
-                            <input type="hidden" name="form-name" value="contact">
+                        <form id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID_HERE" method="POST">
                             <div class="row">
                                 <div class="col-half">
                                     <label>NAME</label>
