Updated testimonials with real Google Reviews

--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
                         <div class="reviewer-header">
                             <div class="reviewer-avatar" style="background-color: #ef5350;">P</div>
                             <div class="reviewer-info">
-                                <h4>Priya & Rahul</h4>
-                                <div class="reviewer-meta">2 days ago</div>
+                                <h4>Pamela Geocardu</h4>
+                                <div class="reviewer-meta">2 months ago</div>
                             </div>
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/120px-Google_%22G%22_logo.svg.png"
                                 style="width: 20px; opacity: 0.5; margin-left: auto;">
@@ -368,19 +368,19 @@
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="review-text" style="font-size: 0.95rem; color: #444;">"WAW Events transformed our
-                            venue
-                            into a fairytale. The pastel florals were exactly what I dreamed of. Absolute perfection!
-                            Highly recommended for anyone looking for class and elegance."</p>
+                        <p class="review-text" style="font-size: 0.95rem; color: #444;">"Bring your celebration to
+                            another level with WAW!!! They are just incredibly good! At first I was nervous... Very nice
+                            company, very responsive and easy communication, I would recommend 100 times! Cant wait for
+                            my next event!!!! Thank you so much ❤️"</p>
                     </div>
 
                     <!-- Review 2 -->
                     <div class="testimonial-card google-style animate-up delay-1">
                         <div class="reviewer-header">
-                            <div class="reviewer-avatar" style="background-color: #42a5f5;">A</div>
+                            <div class="reviewer-avatar" style="background-color: #42a5f5;">R</div>
                             <div class="reviewer-info">
-                                <h4>Anjali S.</h4>
-                                <div class="reviewer-meta">3 weeks ago</div>
+                                <h4>Ravali Dharmapuri</h4>
+                                <div class="reviewer-meta">2 months ago</div>
                             </div>
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/120px-Google_%22G%22_logo.svg.png"
                                 style="width: 20px; opacity: 0.5; margin-left: auto;">
@@ -389,18 +389,18 @@
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="review-text" style="font-size: 0.95rem; color: #444;">"Professional, creative, and so
-                            easy to work with. They handled everything for our Sangeet, and the LED stage was a huge
-                            hit. The team is super responsive and friendly."</p>
+                        <p class="review-text" style="font-size: 0.95rem; color: #444;">"Excellent decor
+                            service—punctual, creative, and easy to work with. Shivani and her team delivered a birthday
+                            setup that exceeded expectations. Highly recommended!"</p>
                     </div>
 
                     <!-- Review 3 -->
                     <div class="testimonial-card google-style animate-up delay-2">
                         <div class="reviewer-header">
-                            <div class="reviewer-avatar" style="background-color: #66bb6a;">M</div>
+                            <div class="reviewer-avatar" style="background-color: #66bb6a;">J</div>
                             <div class="reviewer-info">
-                                <h4>Meera Patel</h4>
-                                <div class="reviewer-meta">1 month ago</div>
+                                <h4>Jian Enano</h4>
+                                <div class="reviewer-meta">4 months ago</div>
                             </div>
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/120px-Google_%22G%22_logo.svg.png"
                                 style="width: 20px; opacity: 0.5; margin-left: auto;">
@@ -409,9 +409,9 @@
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="review-text" style="font-size: 0.95rem; color: #444;">"The team went above and beyond
-                            for my daughter's first birthday. The 'Pastel Carnival' theme was adorable! Best decor
-                            service in NJ hands down."</p>
+                        <p class="review-text" style="font-size: 0.95rem; color: #444;">"They did my son’s baptism and
+                            it was beautiful!! Highly recommended for sure!! Thank you for your wonderful work! Looking
+                            forward for the next one!"</p>
                     </div>
                 </div>
 
