--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <!-- Category 2: Engagement & Sangeet -->
                 <div class="service-card animate-up delay-1">
                     <div class="card-img">
-                        <img src="images/sangeet.png" alt="Engagement & Sangeet">
+                        <img src="images/sangeet_new.png" alt="Engagement & Sangeet">
                     </div>
                     <div class="card-body">
                         <h3>Engagement & Sangeet</h3>
