--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="index.html" class="logo">
-                <img src="images/waw_events_new_logo.png" alt="WAW Events - From Dream to Reality"
-                    style="height: 120px;">
+                <img src="images/waw_logo_final_v2.png" alt="WAW Events - From Dream to Reality" style="height: 120px;">
             </a>
             <div class="nav-links">
                 <div class="mobile-close-btn">
